force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/Participant_Workflow_Form_Field__mdt.object-meta.xml
<CustomObject>
    <label>Participant Workflow Form Field</label>
    <pluralLabel>Participant Workflow Form Fields</pluralLabel>
</CustomObject>