force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Depends_On_Values__c.field-meta.xml
<CustomField>
    <fullName>Depends_On_Values__c</fullName>
    <label>Depends On Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>