force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Editable_for_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Editable_for_Statuses__c</fullName>
    <label>Editable for Statuses</label>
    <type>TextArea</type>
</CustomField>