force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/False_Value_Validation_Error_Label__c.field-meta.xml
<CustomField>
    <fullName>False_Value_Validation_Error_Label__c</fullName>
    <label>False Value Validation Error Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>