force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Only_Future_Dates__c.field-meta.xml
<CustomField>
    <fullName>Only_Future_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Future Dates</label>
    <type>Checkbox</type>
</CustomField>