force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Populate_Fields_Map__c.field-meta.xml
<CustomField>
    <fullName>Populate_Fields_Map__c</fullName>
    <label>Populate Fields Map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>