force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Populate_from_Field__c.field-meta.xml
<CustomField>
    <fullName>Populate_from_Field__c</fullName>
    <label>Populate from Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>