force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Required_Condition__c.field-meta.xml
<CustomField>
    <fullName>Required_Condition__c</fullName>
    <label>Required Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>