force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Required_for_Steps__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Steps__c</fullName>
    <label>Required for Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>