force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Required_Title_Label__c.field-meta.xml
<CustomField>
    <fullName>Required_Title_Label__c</fullName>
    <label>Required Title Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>