force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Status_History_Record_Field__c.field-meta.xml
<CustomField>
    <fullName>Status_History_Record_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status History Record Field</label>
    <type>Checkbox</type>
</CustomField>