force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Strict_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Strict_Dependency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strict Dependency</label>
    <type>Checkbox</type>
</CustomField>