force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/True_Value_Label__c.field-meta.xml
<CustomField>
    <fullName>True_Value_Label__c</fullName>
    <label>True Value Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>