force-app/main/default/objects/Participant_Workflow_Form_Field__mdt/fields/Valid_Value_for_Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>Valid_Value_for_Validation_Message__c</fullName>
    <label>Valid Value for Validation Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>